--- a/Step2/CMakeLists.txt
+++ b/Step2/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # TODO 7: Create a variable USE_MYMATH using option and set default to ON
+option(USE_MYMATH "determine if use my own math functions" ON)
 
 # configure a header file to pass some of the CMake settings
 # to the source code
@@ -20,8 +21,14 @@ configure_file(TutorialConfig.h.in TutorialConfig.h)
 #
 # Only call add_subdirectory and only add MathFunctions specific values
 # to EXTRA_LIBS and EXTRA_INCLUDES if USE_MYMATH is true.
+if(USE_MYMATH)
+    add_subdirectory(MathFunctions)
+    list(APPEND EXTRA_LIBS MathFunctions)
+    list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions/")
+endif(USE_MYMATH)
 
 # TODO 2: Use add_subdirectory() to add MathFunctions to this project
+# add_subdirectory(MathFunctions)
 
 # add the executable
 add_executable(Tutorial tutorial.cxx)
@@ -30,6 +37,7 @@ add_executable(Tutorial tutorial.cxx)
 # in target_link_libraries.
 
 # TODO 3: Use target_link_libraries to link the library to our executable
+target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
 
 # TODO 4: Add MathFunctions to Tutorial's target_include_directories()
 # Hint: ${PROJECT_SOURCE_DIR} is a path to the project source. AKA This folder!
@@ -41,4 +49,5 @@ add_executable(Tutorial tutorial.cxx)
 # so that we will find TutorialConfig.h
 target_include_directories(Tutorial PUBLIC
                            "${PROJECT_BINARY_DIR}"
+                           "${EXTRA_INCLUDES}"
                            )
